--- a/HTML-CSS-RWD/use case/UC3/sapient_tours.html
+++ b/HTML-CSS-RWD/use case/UC3/sapient_tours.html
@@ -2,170 +2,13 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Responsive Layout</title>
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font: 62.5% Georgia, "Times New Roman", Times, serif;
-            background-color: #fff;
-        }
-
-        .wrapper {
-            font-size: 1.6rem;
-        }
-
-        @media (max-width: 959px) {
-            html,
-            body {
-                font-size: 50%;
-            }
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav {
-            position: sticky;
-            top: 0;
-            left: 0;
-        }
-
-        nav ul {
-            list-style: none;
-            height: 50px;
-            background-color: rgb(202, 117, 5);
-            padding-left: 1.4054813773717498%;
-            overflow: hidden;
-            margin: 10px 0;
-            width: 100%;
-        }
-
-        nav li {
-            float: left;
-            width: 19.71890372452565%;
-            box-sizing: border-box;
-            line-height: 50px;
-            padding: 10px 0;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        main {
-            width: 68.05555555555556%;
-            margin: 0 auto;
-            display: flow-root;
-        }
-
-        .mainImg {
-            float: left;
-            width: 44.25496762011536%;
-            margin-right: 1.4751655873371787%;
-
-        }
-
-        .logo {
-            font-size: 3rem;
-            font-weight: bold;
-            line-height: 50px;
-            width: 68.05555555555556%;
-            margin: 0 auto;
-            margin-top: 10px;
-        }
-
-        .logoImg {
-            height: 50px;
-            float: left;
-            margin-right: 10px;
-        }
-
-        article,
-        aside {
-            float: left;
-            box-sizing: border-box;
-        }
-
-
-        article {
-            padding-right: 10px;
-            width: 70%;
-        }
-
-        aside {
-            width: 30%;
-        }
-
-        aside ul {
-            display: flow-root;
-            padding: 0;
-        }
-
-        aside li {
-            float: left;
-            width: 49.31157923722979%;
-        }
-
-        aside li:nth-child(2n - 1) {
-            margin-right: 1.3768415255404103%;
-        }
-
-        aside li img {
-            max-width: 100%;
-        }
-
-        @media (max-width: 639px) {
-            body {
-                display: flow-root;
-            }
-
-            article,
-            aside {
-                float: none;
-                width: 100%;
-            }
-            nav {
-                width: 30%;
-                float: left;
-                margin-top: 24px;
-            }
-            nav ul {
-                width: 100%;
-                margin: 0;
-                height: auto;
-            }
-            nav li {
-            float: none;
-            width: 100%;
-            padding: 0 2%;
-            box-sizing: border-box;
-        }
-
-        main {
-            padding-left: 2%;
-            box-sizing: border-box;
-        }
-
-        .logo {
-            width: 100%;
-        }
-        }
-    </style>
+    <meta charset="utf-8">
+    <title>Sapient Tours</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
-    <div class="wrapper">
+
     <div class="logo">
         <img class='logoImg' src="images/sapient_logo.png" /> Sapient Tours
     </div>
@@ -257,7 +100,6 @@
 
         </aside>
     </main>
-    </div>
 
 </body>
 
