--- a/HTML-CSS-RWD/use case/UC7/table_assignment.html
+++ b/HTML-CSS-RWD/use case/UC7/table_assignment.html
@@ -6,58 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Table</title>
-    <style>
-        body {
-            width: 80%;
-            margin: 30px auto;
-        }
-
-        table,
-        th,
-        td {
-            border: 2px solid black;
-            text-align: left;
-            border-collapse: collapse;
-        }
-
-        th,
-        td {
-            padding: 10px;
-        }
-        table {
-            border: solid 5px black;
-            border-top: none;
-        }
-        caption {
-            border: solid 5px black;
-            border-bottom: none;
-            background-color: darkgoldenrod;
-            font-style: italic;
-        }
-
-        th {
-            background-color: yellow;
-        }
-
-        td {
-            background-color: #ddd;
-        }
-
-        .red {
-            color: red;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        .italic {
-            font-style: italic;
-        }
-        th:last-child, td:last-child {
-            width: 20%;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
