--- a/HTML-CSS-RWD/use case/UC1/food_recipie.html
+++ b/HTML-CSS-RWD/use case/UC1/food_recipie.html
@@ -6,35 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe</title>
-    <style>
-        html,
-        body{
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: #e1d8b9;
-            font: 100% Georgia, "Times New Roman", Times, serif;
-        }
-
-        h1,
-        h2,
-        h3,
-        p,
-        ul,
-        ol {
-            margin-left: 10px;
-        }
-
-        .wrapper {
-            width: 980px;
-            background-color: whitesmoke;
-            margin: 0 auto;
-            padding: 2px;
-            border: 5px solid blue;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
