--- a/BOOTSTRAP-APP/index.html
+++ b/BOOTSTRAP-APP/index.html
@@ -38,6 +38,49 @@
                 <p>Right section</p>
             </section>
         </div>
+
+        <div class="container">
+            <div class="row justify-content-start">
+              <div class="col-4">
+                One of two columns
+              </div>
+              <div class="col-4">
+                One of two columns
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-4">
+                One of two columns
+              </div>
+              <div class="col-4">
+                One of two columns
+              </div>
+            </div>
+            <div class="row justify-content-end">
+              <div class="col-4">
+                One of two columns
+              </div>
+              <div class="col-4">
+                One of two columns
+              </div>
+            </div>
+            <div class="row justify-content-around">
+              <div class="col-4">
+                One of two columns
+              </div>
+              <div class="col-4">
+                One of two columns
+              </div>
+            </div>
+            <div class="row justify-content-between">
+              <div class="col-4">
+                One of two columns
+              </div>
+              <div class="col-4">
+                One of two columns
+              </div>
+            </div>
+          </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
