--- a/JS_MODULE_APP/AMD/index.html
+++ b/JS_MODULE_APP/AMD/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Javascript-apps</title>
+    <title>Document</title>
+    <script data-main="./src/index.js" src="./src/require.js"></script>
 </head>
 <body>
-    <h1>Javascript Apps</h1>
-    <script src = './src/srp_lab.js'/> 
+    <h1>Javascript Modules - AMD</h1>
 </body>
 </html>
