--- a/JS_MODULE_APP/pattern_2/index.html
+++ b/JS_MODULE_APP/pattern_2/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Javascript-apps</title>
+    <title>Document</title>
+    <script src="./src/index.js"/>
 </head>
 <body>
-    <h1>Javascript Apps</h1>
-    <script src = './src/srp_lab.js'/> 
+    <h1>Javascript Modules - Pattern 2</h1>
 </body>
 </html>
