--- a/JS-ES6/hands-on/index.html
+++ b/JS-ES6/hands-on/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Javascript Apps</h1>
-    <script src = './src/srp_lab.js'/> 
+
+    <button id = 'hello'>Hello</button>
+    <script src = './src/index.js'/> 
 </body>
 </html>
