--- a/NODE-APP/use case/UC2/form_file.html
+++ b/NODE-APP/use case/UC2/form_file.html
@@ -12,7 +12,7 @@
         <form enctype="multipart/form-data" action="/" method="post" >
             <div>
                 <label for = 'uploadFile' >Upload File</label>
-                <input type="file" >
+                <input id = 'uploadFile' type="file" >
             </div>
             <input type="submit" value = 'Submit'>
         </form>
